--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     compileOnly ("org.projectlombok:lombok:1.16.16")
     annotationProcessor 'org.projectlombok:lombok:1.16.6'
+
+    testImplementation("org.springframework.boot:spring-boot-starter-test:2.6.3")
 }
 
 test {
